--- a/index.html
+++ b/index.html
@@ -6,56 +6,82 @@
 <title>Sudarshan Gautam | Academic Profile</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  /* Reset & base */
-  * { margin:0; padding:0; box-sizing:border-box; }
-  html { scroll-behavior: smooth; }
-  body { font-family:'Roboto', sans-serif; background:#f4f6f8; color:#333; }
+/* Base */
+* { margin:0; padding:0; box-sizing:border-box; }
+html { scroll-behavior: smooth; }
+body { font-family:'Roboto', sans-serif; background:#f0f2f5; color:#333; }
 
-  /* Navigation */
-  nav { position:sticky; top:0; background:#1a73e8; padding:15px 30px; display:flex; justify-content:center; z-index:1000; }
-  nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:bold; transition:0.3s; }
-  nav a:hover { color:#ffeb3b; }
+/* Navigation */
+nav { position:sticky; top:0; background:#1e3a8a; padding:15px 30px; display:flex; justify-content:center; z-index:1000; box-shadow:0 3px 6px rgba(0,0,0,0.1);}
+nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:bold; transition:0.3s; }
+nav a:hover { color:#ffdd57; }
 
-  /* Header */
-  header { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
-    background: linear-gradient(-45deg,#1a73e8,#4285f4,#0b59d1,#1a73e8); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; }
-  @keyframes gradient { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
-  header h1 { font-size:3em; margin-bottom:15px; }
-  header p { font-size:1.3em; margin-bottom:25px; }
-  .btn { display:inline-block; padding:12px 30px; background:#fff; color:#1a73e8; font-weight:bold; border-radius:30px; transition:0.3s; }
-  .btn:hover { background:#e0e7ff; transform:translateY(-3px); }
+/* Header */
+header { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
+    background: linear-gradient(-45deg,#1e3a8a,#3b82f6,#6366f1,#1e3a8a); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; }
+@keyframes gradient { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
+header h1 { font-size:3em; margin-bottom:15px; text-shadow:0 2px 5px rgba(0,0,0,0.3);}
+header p { font-size:1.3em; margin-bottom:25px; }
+.btn { display:inline-block; padding:12px 30px; background:#fff; color:#1e3a8a; font-weight:bold; border-radius:30px; transition:0.3s; }
+.btn:hover { background:#e0e7ff; transform:translateY(-3px); }
 
-  /* Sections */
-  section { padding:80px 20px; max-width:1100px; margin:0 auto; }
-  section h2 { text-align:center; font-size:2.5em; margin-bottom:50px; color:#1a73e8; }
+/* Section Styles */
+section { padding:80px 20px; max-width:1100px; margin:0 auto; border-radius:15px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.1); }
+section h2 { text-align:center; font-size:2.5em; margin-bottom:50px; color:#1e3a8a; }
 
-  /* About */
-  .about { background:#fff; border-radius:15px; padding:50px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.1); display:flex; flex-wrap:wrap; align-items:center; }
-  .about img { width:250px; height:250px; border-radius:50%; object-fit:cover; margin-right:40px; flex-shrink:0; }
-  .about div { flex:1 1 400px; }
-  .about p { margin-bottom:20px; }
+/* About */
+.about { background:#ffffff; display:flex; flex-wrap:wrap; align-items:center; gap:30px; }
+.about img { width:250px; height:250px; border-radius:50%; object-fit:cover; flex-shrink:0; box-shadow:0 4px 15px rgba(0,0,0,0.1);}
+.about div p { margin-bottom:15px; line-height:1.6; }
 
-  /* Publications */
-  .publications { background:#fff; border-radius:15px; padding:50px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.1); }
-  .publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-  .publications li { background:#f1f5f9; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
-  .publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
-  .publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#1a73e8; }
+/* Achievements */
+.achievements { background:#fef9f9; }
+.achievements ul { list-style:none; padding:0; display:flex; flex-direction:column; gap:15px; }
+.achievements li { background:#fff0f5; padding:20px; border-left:5px solid #d946ef; border-radius:10px; transition:0.3s; }
+.achievements li:hover { transform:translateX(5px); box-shadow:0 8px 15px rgba(0,0,0,0.1); }
 
-  /* Contact */
-  .contact { background:#fff; border-radius:15px; padding:50px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.1); text-align:center; }
-  .contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:#1a73e8; color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; }
-  .contact a:hover { background:#155ab6; transform:translateY(-3px); }
+/* Gallery */
+.gallery { background:#f9f9ff; }
+.gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+.gallery-grid img { width:100%; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); transition:0.3s; }
+.gallery-grid img:hover { transform:scale(1.05); }
 
-  /* Footer */
-  footer { text-align:center; padding:40px 20px; background:#1a73e8; color:#fff; }
+/* Seminars & Conferences Tabs */
+.seminars { background:#fff; }
+.tabs { display:flex; justify-content:center; gap:15px; margin-bottom:30px; flex-wrap:wrap; }
+.tablinks { padding:10px 25px; cursor:pointer; background:#1e3a8a; color:#fff; border:none; border-radius:30px; font-weight:bold; transition:0.3s; }
+.tablinks:hover { background:#3b82f6; }
+.tablinks.active { background:#d946ef; }
+.tabcontent { display:none; animation:fadeIn 0.5s ease; }
+@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
+.tabcontent ul { list-style:none; padding:0; }
+.tabcontent li { background:#f3f4f6; margin-bottom:15px; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
 
-  /* Responsive */
-  @media(max-width:768px){
-    .about { flex-direction:column; text-align:center; }
-    .about img { margin:0 0 30px 0; }
-    .publications ul { flex-direction:column; align-items:center; }
-  }
+/* Publications */
+.publications { background:#f0fff4; }
+.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+.publications li { background:#dcfce7; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
+.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#15803d; }
+
+/* Contact */
+.contact { background:#fff7ed; text-align:center; }
+.contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:#d97706; color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; }
+.contact a:hover { background:#b45309; transform:translateY(-3px); }
+
+/* Footer */
+footer { text-align:center; padding:40px 20px; background:#1e3a8a; color:#fff; }
+
+/* Responsive */
+@media(max-width:768px){
+  .about { flex-direction:column; text-align:center; }
+  .about img { margin:0 0 20px 0; }
+  .gallery-grid { grid-template-columns:1fr; }
+}
+
+/* Smooth tab animation */
+.tabcontent ul li { transition:0.3s; }
+.tabcontent ul li:hover { transform:translateX(5px); box-shadow:0 8px 15px rgba(0,0,0,0.1); }
 </style>
 </head>
 <body>
@@ -64,6 +90,9 @@
 <nav>
   <a href="#home">Home</a>
   <a href="#about">About Me</a>
+  <a href="#achievements">Achievements</a>
+  <a href="#gallery">Gallery</a>
+  <a href="#seminars">Seminars & Conferences</a>
   <a href="#publications">Publications</a>
   <a href="#contact">Contact</a>
 </nav>
@@ -80,10 +109,53 @@
   <img src="yourphoto.jpg" alt="Sudarshan Gautam">
   <div>
     <h2>About Me</h2>
-    <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, Natural Language Processing, and multilingual computational frameworks. My work focuses on Paninian grammar, compound word semantics, and universal semantic representation.</p>
+    <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.</p>
     <p><strong>Education:</strong> PhD/MSc in Linguistics, University Name</p>
     <p><strong>Research Interests:</strong> Paninian Grammar, Universal Semantic Representation, Multilingual NLP</p>
-    <p><strong>Professional Experience:</strong> List your teaching, research, or professional positions here.</p>
+    <p><strong>Professional Experience:</strong> Teaching, research, or professional positions.</p>
+  </div>
+</section>
+
+<!-- Achievements -->
+<section id="achievements" class="achievements">
+  <h2>Achievements</h2>
+  <ul>
+    <li>Best Paper Award – 2023</li>
+    <li>Young Researcher Fellowship – 2022</li>
+    <li>National Level Recognition for NLP Work</li>
+  </ul>
+</section>
+
+<!-- Gallery -->
+<section id="gallery" class="gallery">
+  <h2>Gallery</h2>
+  <div class="gallery-grid">
+    <img src="image1.jpg" alt="Event 1">
+    <img src="image2.jpg" alt="Event 2">
+    <img src="image3.jpg" alt="Event 3">
+  </div>
+</section>
+
+<!-- Seminars & Conferences -->
+<section id="seminars" class="seminars">
+  <h2>Seminars & Conferences</h2>
+  <div class="tabs">
+    <button class="tablinks" onclick="openTab(event,'International')">International</button>
+    <button class="tablinks" onclick="openTab(event,'National')">National</button>
+  </div>
+
+  <div id="International" class="tabcontent">
+    <ul>
+      <li>International Seminar on NLP – Topic: वाक्यार्थ/शास्त्रार्थ, 2023</li>
+      <li>International Conference on Linguistics, 2022</li>
+    </ul>
+  </div>
+
+  <div id="National" class="tabcontent">
+    <ul>
+      <li>National Seminar on Computational Linguistics, 2023</li>
+      <li>National Conference on Paninian Grammar, 2021</li>
+    </ul>
   </div>
 </section>
 
@@ -91,18 +163,9 @@
 <section id="publications" class="publications">
   <h2>Publications</h2>
   <ul>
-    <li>
-      Title of Paper 1 – Journal/Conference, Year
-      <a href="#">[PDF/DOI]</a>
-    </li>
-    <li>
-      Title of Paper 2 – Journal/Conference, Year
-      <a href="#">[PDF/DOI]</a>
-    </li>
-    <li>
-      Title of Paper 3 – Journal/Conference, Year
-      <a href="#">[PDF/DOI]</a>
-    </li>
+    <li>Title of Paper 1 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
+    <li>Title of Paper 2 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
+    <li>Title of Paper 3 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
   </ul>
 </section>
 
@@ -120,5 +183,16 @@
   © 2025 Sudarshan Gautam. All Rights Reserved.
 </footer>
 
-</body>
-</html>
+<!-- JS for Tabs -->
+<script>
+function openTab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i=0;i<tabcontent.length;i++){ tabcontent[i].style.display="none"; }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i=0;i<tablinks.length;i++){ tablinks[i].className = tablinks[i].className.replace(" active",""); }
+  document.getElementById(tabName).style.display="block";
+  evt.currentTarget.className += " active";
+}
+document.addEventListener("DOMContentLoaded", function(){ document.getElementsByClassName("tablinks")[0].click(); });
+</script>
