--- a/index.html
+++ b/index.html
@@ -4,73 +4,72 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sudarshan Gautam | Academic Profile</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 <style>
 /* Base */
 * { margin:0; padding:0; box-sizing:border-box; }
 html { scroll-behavior: smooth; }
-body { font-family:'Roboto', sans-serif; background:#f0f2f5; color:#333; }
+body { font-family:'Roboto', sans-serif; background:#F9FAFB; color:#333; }
 
 /* Navigation */
-nav { position:sticky; top:0; background:#1e3a8a; padding:15px 30px; display:flex; justify-content:center; z-index:1000; box-shadow:0 3px 6px rgba(0,0,0,0.1);}
-nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:bold; transition:0.3s; }
-nav a:hover { color:#ffdd57; }
+nav { position:sticky; top:0; background:#4F46E5; padding:15px 30px; display:flex; justify-content:center; z-index:1000; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:600; transition:0.3s; }
+nav a:hover { color:#A5B4FC; }
 
 /* Header */
 header { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
-    background: linear-gradient(-45deg,#1e3a8a,#3b82f6,#6366f1,#1e3a8a); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; }
+    background: linear-gradient(-45deg,#4F46E5,#6366F1,#4F46E5,#A5B4FC); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; position:relative; }
 @keyframes gradient { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
-header h1 { font-size:3em; margin-bottom:15px; text-shadow:0 2px 5px rgba(0,0,0,0.3);}
-header p { font-size:1.3em; margin-bottom:25px; }
-.btn { display:inline-block; padding:12px 30px; background:#fff; color:#1e3a8a; font-weight:bold; border-radius:30px; transition:0.3s; }
-.btn:hover { background:#e0e7ff; transform:translateY(-3px); }
+header h1 { font-family:'Poppins', sans-serif; font-size:3.5em; margin-bottom:15px; text-shadow:0 3px 10px rgba(0,0,0,0.3);}
+header p { font-size:1.4em; margin-bottom:25px; text-shadow:0 2px 5px rgba(0,0,0,0.2);}
+.btn { display:inline-block; padding:12px 30px; background:linear-gradient(45deg,#A5B4FC,#6366F1); color:#fff; font-weight:bold; border-radius:30px; transition:0.3s; text-decoration:none;}
+.btn:hover { transform:translateY(-3px); box-shadow:0 8px 15px rgba(0,0,0,0.2); }
+
+/* Live date/time */
+#datetime { position:absolute; top:15px; right:20px; font-size:1em; background:rgba(255,255,255,0.2); padding:5px 12px; border-radius:20px; color:#fff; font-weight:bold; }
 
 /* Section Styles */
-section { padding:80px 20px; max-width:1100px; margin:0 auto; border-radius:15px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.1); }
-section h2 { text-align:center; font-size:2.5em; margin-bottom:50px; color:#1e3a8a; }
+section { padding:80px 20px; max-width:1100px; margin:0 auto 50px auto; border-radius:15px; box-shadow:0 8px 20px rgba(0,0,0,0.05); background:#fff; }
+section h2 { text-align:center; font-size:2.8em; margin-bottom:50px; color:#4F46E5; font-family:'Poppins', sans-serif; }
 
 /* About */
-.about { background:#ffffff; display:flex; flex-wrap:wrap; align-items:center; gap:30px; }
-.about img { width:250px; height:250px; border-radius:50%; object-fit:cover; flex-shrink:0; box-shadow:0 4px 15px rgba(0,0,0,0.1);}
-.about div p { margin-bottom:15px; line-height:1.6; }
+.about { display:flex; flex-wrap:wrap; align-items:center; gap:30px; }
+.about img { width:250px; height:250px; border-radius:50%; object-fit:cover; flex-shrink:0; box-shadow:0 6px 20px rgba(0,0,0,0.1);}
+.about div p { margin-bottom:15px; line-height:1.6; font-size:1.1em; }
 
 /* Achievements */
-.achievements { background:#fef9f9; }
 .achievements ul { list-style:none; padding:0; display:flex; flex-direction:column; gap:15px; }
-.achievements li { background:#fff0f5; padding:20px; border-left:5px solid #d946ef; border-radius:10px; transition:0.3s; }
-.achievements li:hover { transform:translateX(5px); box-shadow:0 8px 15px rgba(0,0,0,0.1); }
+.achievements li { background:#EFF6FF; padding:20px; border-left:6px solid #6366F1; border-radius:12px; transition:0.3s; font-weight:500; }
+.achievements li:hover { transform:translateX(5px); box-shadow:0 8px 20px rgba(0,0,0,0.1); }
 
 /* Gallery */
-.gallery { background:#f9f9ff; }
 .gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
 .gallery-grid img { width:100%; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); transition:0.3s; }
-.gallery-grid img:hover { transform:scale(1.05); }
+.gallery-grid img:hover { transform:scale(1.05); filter:brightness(1.05); }
 
 /* Seminars & Conferences Tabs */
-.seminars { background:#fff; }
-.tabs { display:flex; justify-content:center; gap:15px; margin-bottom:30px; flex-wrap:wrap; }
-.tablinks { padding:10px 25px; cursor:pointer; background:#1e3a8a; color:#fff; border:none; border-radius:30px; font-weight:bold; transition:0.3s; }
-.tablinks:hover { background:#3b82f6; }
-.tablinks.active { background:#d946ef; }
+.seminars .tabs { display:flex; justify-content:center; gap:15px; margin-bottom:30px; flex-wrap:wrap; }
+.tablinks { padding:10px 25px; cursor:pointer; background:#6366F1; color:#fff; border:none; border-radius:30px; font-weight:600; transition:0.3s; }
+.tablinks:hover { background:#A5B4FC; }
+.tablinks.active { background:#4F46E5; }
 .tabcontent { display:none; animation:fadeIn 0.5s ease; }
 @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 .tabcontent ul { list-style:none; padding:0; }
-.tabcontent li { background:#f3f4f6; margin-bottom:15px; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
+.tabcontent li { background:#F3F4F6; margin-bottom:15px; padding:20px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.05); font-weight:500; }
 
 /* Publications */
-.publications { background:#f0fff4; }
 .publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-.publications li { background:#dcfce7; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
+.publications li { background:#DCFCFF; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
 .publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
-.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#15803d; }
+.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#0C4A6E; }
 
 /* Contact */
-.contact { background:#fff7ed; text-align:center; }
-.contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:#d97706; color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; }
-.contact a:hover { background:#b45309; transform:translateY(-3px); }
+.contact { text-align:center; }
+.contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:linear-gradient(45deg,#6366F1,#4F46E5); color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; text-decoration:none; }
+.contact a:hover { transform:translateY(-3px); box-shadow:0 8px 15px rgba(0,0,0,0.2); }
 
 /* Footer */
-footer { text-align:center; padding:40px 20px; background:#1e3a8a; color:#fff; }
+footer { text-align:center; padding:40px 20px; background:#4F46E5; color:#fff; font-weight:500; }
 
 /* Responsive */
 @media(max-width:768px){
@@ -78,10 +77,6 @@ footer { text-align:center; padding:40px 20px; background:#1e3a8a; color:#fff; }
   .about img { margin:0 0 20px 0; }
   .gallery-grid { grid-template-columns:1fr; }
 }
-
-/* Smooth tab animation */
-.tabcontent ul li { transition:0.3s; }
-.tabcontent ul li:hover { transform:translateX(5px); box-shadow:0 8px 15px rgba(0,0,0,0.1); }
 </style>
 </head>
 <body>
@@ -100,8 +95,9 @@ footer { text-align:center; padding:40px 20px; background:#1e3a8a; color:#fff; }
 <!-- Header -->
 <header id="home">
   <h1>Sudarshan Gautam</h1>
-  <p>Researcher in Linguistics & Natural Language Processing</p>
+  <p>Researcher in Linguistics & NLP</p>
   <a href="CV.pdf" class="btn" target="_blank">Download CV</a>
+  <div id="datetime"></div>
 </header>
 
 <!-- About Me -->
@@ -183,8 +179,9 @@ footer { text-align:center; padding:40px 20px; background:#1e3a8a; color:#fff; }
   © 2025 Sudarshan Gautam. All Rights Reserved.
 </footer>
 
-<!-- JS for Tabs -->
+<!-- JS for Tabs + Live Date/Time -->
 <script>
+// Tabs
 function openTab(evt, tabName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
@@ -195,4 +192,16 @@ function openTab(evt, tabName) {
   evt.currentTarget.className += " active";
 }
 document.addEventListener("DOMContentLoaded", function(){ document.getElementsByClassName("tablinks")[0].click(); });
+
+// Live Date & Time
+function updateDateTime() {
+  const now = new Date();
+  const options = { weekday:'short', year:'numeric', month:'short', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
+  document.getElementById('datetime').textContent = now.toLocaleDateString('en-US', options);
+}
+setInterval(updateDateTime, 1000);
+updateDateTime();
 </script>
+
+</body>
+</html>
