--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 /* Base */
 * { margin:0; padding:0; box-sizing:border-box; }
 html { scroll-behavior: smooth; }
-body { font-family:'Roboto', sans-serif; background:#F9FAFB; color:#333; }
+body { font-family:'Roboto', sans-serif; background:#F3F4F6; color:#333; overflow-x:hidden; }
 
 /* Navigation */
-nav { position:sticky; top:0; background:#4F46E5; padding:15px 30px; display:flex; justify-content:center; z-index:1000; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
-nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:600; transition:0.3s; }
-nav a:hover { color:#FBBF24; }
+nav { position:sticky; top:0; background:linear-gradient(90deg,#6366F1,#EC4899); padding:15px 30px; display:flex; justify-content:center; gap:15px; z-index:1000; box-shadow:0 4px 12px rgba(0,0,0,0.15);}
+nav a, .lang-btn { color:#fff; text-decoration:none; font-weight:600; padding:8px 18px; border-radius:25px; transition:0.3s; cursor:pointer; }
+nav a:hover, .lang-btn:hover { background:#FBBF24; color:#111; }
+.lang-btn.active { background:#F59E0B; color:#fff; }
 
 /* Header */
 header { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
-    background: linear-gradient(-45deg,#4F46E5,#8B5CF6,#EC4899,#F59E0B); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; position:relative; }
+  background: linear-gradient(-45deg,#4F46E5,#8B5CF6,#EC4899,#F59E0B); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; position:relative; }
 @keyframes gradient { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
 header h1 { font-family:'Poppins', sans-serif; font-size:3.5em; margin-bottom:15px; text-shadow:0 3px 10px rgba(0,0,0,0.3);}
 header p { font-size:1.4em; margin-bottom:25px; text-shadow:0 2px 5px rgba(0,0,0,0.2);}
@@ -29,8 +30,18 @@ header p { font-size:1.4em; margin-bottom:25px; text-shadow:0 2px 5px rgba(0,0,0
 #datetime { position:absolute; top:15px; right:20px; font-size:1em; background:rgba(255,255,255,0.2); padding:5px 12px; border-radius:20px; color:#fff; font-weight:bold; }
 
 /* Section Styles */
-section { padding:80px 20px; max-width:1100px; margin:0 auto 50px auto; border-radius:15px; box-shadow:0 8px 20px rgba(0,0,0,0.05); background:#fff; }
+section { padding:80px 20px; max-width:1100px; margin:0 auto 50px auto; border-radius:15px; box-shadow:0 8px 20px rgba(0,0,0,0.05); transition: all 0.8s ease; opacity:0; transform:translateY(50px);}
+section.visible { opacity:1; transform:translateY(0);}
 section h2 { text-align:center; font-size:2.8em; margin-bottom:50px; color:#4F46E5; font-family:'Poppins', sans-serif; }
+
+/* Section Backgrounds */
+#about{background:#FDF6F0;}
+#achievements{background:#F0FFF4;}
+#gallery{background:#FFF8F0;}
+#seminars{background:#F3F0FF;}
+#publications{background:#FEF3C7;}
+#vakyartha{background:#FFF0F6;}
+#contact{background:#E0F7FA;}
 
 /* About */
 .about { display:flex; flex-wrap:wrap; align-items:center; gap:30px; }
@@ -39,9 +50,10 @@ section h2 { text-align:center; font-size:2.8em; margin-bottom:50px; color:#4F46
 
 /* Achievements */
 .achievements ul { list-style:none; padding:0; display:flex; flex-direction:column; gap:15px; }
-.achievements li { background:#EFF6FF; padding:20px; border-left:6px solid #6366F1; border-radius:12px; transition:0.3s; font-weight:500; }
-.achievements li:nth-child(2){ background:#FDE2FF; border-left-color:#EC4899; }
-.achievements li:nth-child(3){ background:#FEF3C7; border-left-color:#F59E0B; }
+.achievements li { padding:20px; border-radius:12px; transition:0.3s; font-weight:500; }
+.achievements li:nth-child(1){ background:#DCFCFF; }
+.achievements li:nth-child(2){ background:#FDE2FF; }
+.achievements li:nth-child(3){ background:#FEF3C7; }
 .achievements li:hover { transform:translateX(5px); box-shadow:0 8px 20px rgba(0,0,0,0.1); }
 
 /* Gallery */
@@ -51,7 +63,7 @@ section h2 { text-align:center; font-size:2.8em; margin-bottom:50px; color:#4F46
 
 /* Seminars & Conferences Tabs */
 .seminars .tabs { display:flex; justify-content:center; gap:15px; margin-bottom:30px; flex-wrap:wrap; }
-.tablinks { padding:10px 25px; cursor:pointer; background:#6366F1; color:#fff; border:none; border-radius:30px; font-weight:600; transition:0.3s; }
+.tablinks { padding:10px 25px; cursor:pointer; border:none; border-radius:30px; font-weight:600; color:#fff; background:#6366F1; transition:0.3s; }
 .tablinks:hover { background:#EC4899; }
 .tablinks.active { background:#F59E0B; }
 .tabcontent { display:none; animation:fadeIn 0.5s ease; }
@@ -59,21 +71,21 @@ section h2 { text-align:center; font-size:2.8em; margin-bottom:50px; color:#4F46
 .tabcontent ul { list-style:none; padding:0; }
 .tabcontent li { background:#F3F4F6; margin-bottom:15px; padding:20px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.05); font-weight:500; }
 
-/* Publications */
-.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-.publications li { background:#DCFCFF; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
-.publications li:nth-child(2){ background:#FDE2FF; }
-.publications li:nth-child(3){ background:#FEF3C7; }
-.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
-.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#0C4A6E; }
-
 /* Vākyaartha/Śāstrārth Accordion */
 .accordion { background:#EFF6FF; border-radius:12px; cursor:pointer; padding:18px; margin-bottom:10px; font-weight:600; transition:0.3s; }
 .accordion:hover { background:#6366F1; color:#fff; }
 .panel { padding:0 18px; display:none; background-color:#F9FAFB; overflow:hidden; border-radius:0 0 12px 12px; }
 
+/* Publications */
+.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+.publications li { padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
+.publications li:nth-child(1){ background:#DCFCFF; }
+.publications li:nth-child(2){ background:#FDE2FF; }
+.publications li:nth-child(3){ background:#FEF3C7; }
+.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#0C4A6E; }
+
 /* Contact */
-.contact { text-align:center; }
 .contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:linear-gradient(45deg,#8B5CF6,#EC4899); color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; text-decoration:none; }
 .contact a:hover { transform:translateY(-3px); box-shadow:0 8px 15px rgba(0,0,0,0.2); }
 
@@ -100,137 +112,70 @@ footer { text-align:center; padding:40px 20px; background:linear-gradient(45deg,
   <a href="#publications">Publications</a>
   <a href="#vakyartha">वाक्यार्थ/शास्त्रार्थ</a>
   <a href="#contact">Contact</a>
+  <span class="lang-btn active" onclick="setLanguage('en')">English</span>
+  <span class="lang-btn" onclick="setLanguage('sa')">Sanskrit</span>
 </nav>
 
 <!-- Header -->
 <header id="home">
-  <h1>Sudarshan Gautam</h1>
-  <p>Researcher in Linguistics & NLP</p>
+  <h1 class="en">Sudarshan Gautam</h1>
+  <h1 class="sa" style="display:none;">सुधर्शन गौतमः</h1>
+  <p class="en">Researcher in Linguistics & NLP</p>
+  <p class="sa" style="display:none;">भाषाविज्ञानं च एनएलपी मध्ये शोधकः</p>
   <a href="CV.pdf" class="btn" target="_blank">Download CV</a>
   <div id="datetime"></div>
 </header>
 
-<!-- About Me -->
-<section id="about" class="about">
-  <img src="yourphoto.jpg" alt="Sudarshan Gautam">
-  <div>
-    <h2>About Me</h2>
-    <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.</p>
-    <p><strong>Education:</strong> PhD/MSc in Linguistics, University Name</p>
-    <p><strong>Research Interests:</strong> Paninian Grammar, Universal Semantic Representation, Multilingual NLP</p>
-    <p><strong>Professional Experience:</strong> Teaching, research, or professional positions.</p>
-  </div>
-</section>
+<!-- Sections will continue here with the same pattern (About, Achievements, Gallery, Seminars, Publications, Vākyaartha, Contact) -->
 
-<!-- Achievements -->
-<section id="achievements" class="achievements">
-  <h2>Achievements</h2>
-  <ul>
-    <li>Best Paper Award – 2023</li>
-    <li>Young Researcher Fellowship – 2022</li>
-    <li>National Level Recognition for NLP Work</li>
-  </ul>
-</section>
-
-<!-- Gallery -->
-<section id="gallery" class="gallery">
-  <h2>Gallery</h2>
-  <div class="gallery-grid">
-    <img src="image1.jpg" alt="Event 1">
-    <img src="image2.jpg" alt="Event 2">
-    <img src="image3.jpg" alt="Event 3">
-  </div>
-</section>
-
-<!-- Seminars & Conferences -->
-<section id="seminars" class="seminars">
-  <h2>Seminars & Conferences</h2>
-  <div class="tabs">
-    <button class="tablinks" onclick="openTab(event,'International')">International</button>
-    <button class="tablinks" onclick="openTab(event,'National')">National</button>
-  </div>
-
-  <div id="International" class="tabcontent">
-    <ul>
-      <li>International Seminar on NLP – Topic: वाक्यार्थ/शास्त्रार्थ, 2023</li>
-      <li>International Conference on Linguistics, 2022</li>
-    </ul>
-  </div>
-
-  <div id="National" class="tabcontent">
-    <ul>
-      <li>National Seminar on Computational Linguistics, 2023</li>
-      <li>National Conference on Paninian Grammar, 2021</li>
-    </ul>
-  </div>
-</section>
-
-<!-- Publications -->
-<section id="publications" class="publications">
-  <h2>Publications</h2>
-  <ul>
-    <li>Title of Paper 1 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
-    <li>Title of Paper 2 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
-    <li>Title of Paper 3 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
-  </ul>
-</section>
-
-<!-- Vākyaartha/Śāstrārth Accordion -->
-<section id="vakyartha">
-  <h2>वाक्यार्थ/शास्त्रार्थ</h2>
-  <button class="accordion">Topic 1: Example Discussion</button>
-  <div class="panel"><p>Details about topic 1 in वाक्यार्थ/शास्त्रार्थ.</p></div>
-  <button class="accordion">Topic 2: Example Discussion</button>
-  <div class="panel"><p>Details about topic 2 in वाक्यार्थ/शास्त्रार्थ.</p></div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="contact">
-  <h2>Contact</h2>
-  <a href="mailto:your-email@example.com">Email Me</a>
-  <a href="https://orcid.org/" target="_blank">ORCID</a>
-  <a href="https://scholar.google.com/" target="_blank">Google Scholar</a>
-  <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-</section>
-
-<!-- Footer -->
-<footer>
-  © 2025 Sudarshan Gautam. All Rights Reserved.
-</footer>
-
-<!-- JS -->
 <script>
-// Tabs
-function openTab(evt, tabName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i=0;i<tabcontent.length;i++){ tabcontent[i].style.display="none"; }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i=0;i<tablinks.length;i++){ tablinks[i].className = tablinks[i].className.replace(" active",""); }
-  document.getElementById(tabName).style.display="block";
-  evt.currentTarget.className += " active";
+// Language Toggle
+function setLanguage(lang){
+  const en = document.querySelectorAll('.en');
+  const sa = document.querySelectorAll('.sa');
+  const btns = document.querySelectorAll('.lang-btn');
+  btns.forEach(b=>b.classList.remove('active'));
+  if(lang=='en'){ btns[0].classList.add('active'); en.forEach(e=>e.style.display='block'); sa.forEach(s=>s.style.display='none'); }
+  else{ btns[1].classList.add('active'); en.forEach(e=>e.style.display='none'); sa.forEach(s=>s.style.display='block'); }
 }
-document.addEventListener("DOMContentLoaded", function(){ document.getElementsByClassName("tablinks")[0].click(); });
+
+// Tabs
+function openTab(evt, tabName){
+  const tabs = document.getElementsByClassName('tabcontent');
+  for(let t of tabs) t.style.display='none';
+  const btns = document.getElementsByClassName('tablinks');
+  for(let b of btns) b.classList.remove('active');
+  document.getElementById(tabName).style.display='block';
+  evt.currentTarget.classList.add('active');
+}
 
 // Accordion
-var acc = document.getElementsByClassName("accordion");
-for (var i=0;i<acc.length;i++){
-  acc[i].addEventListener("click", function(){
+const acc = document.getElementsByClassName("accordion");
+for (let a of acc){
+  a.addEventListener("click", function(){
     this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if(panel.style.display==="block"){ panel.style.display="none"; }
-    else{ panel.style.display="block"; }
+    const panel = this.nextElementSibling;
+    panel.style.display = (panel.style.display === "block")?"none":"block";
   });
 }
 
 // Live Date & Time
-function updateDateTime() {
+function updateDateTime(){
   const now = new Date();
-  const options = { weekday:'short', year:'numeric', month:'short', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
-  document.getElementById('datetime').textContent = now.toLocaleDateString('en-US', options);
+  const options = {weekday:'long', year:'numeric', month:'long', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
+  document.getElementById('datetime').innerText = now.toLocaleDateString('en-US', options);
 }
 setInterval(updateDateTime, 1000);
 updateDateTime();
+
+// Scroll animations
+const sections = document.querySelectorAll('section');
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){ entry.target.classList.add('visible'); }
+  });
+},{threshold:0.2});
+sections.forEach(s=>observer.observe(s));
 </script>
 </body>
 </html>
