Update index.html: updated the design and added the multilingual option

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ footer { text-align:center; padding:40px 20px; background:linear-gradient(45deg,
 <!-- Header -->
 <header id="home">
   <h1 class="en">Sudarshan Gautam</h1>
-  <h1 class="sa" style="display:none;">सुधर्शन गौतमः</h1>
+  <h1 class="sa" style="display:none;">सुदर्शन गौतमः</h1>
   <p class="en">Researcher in Linguistics & NLP</p>
-  <p class="sa" style="display:none;">भाषाविज्ञानं च एनएलपी मध्ये शोधकः</p>
+  <p class="sa" style="display:none;">भाषाविज्ञानक्षेत्रे NLP विषये च शोधार्थी</p>
   <a href="CV.pdf" class="btn" target="_blank">Download CV</a>
   <div id="datetime"></div>
 </header>
