--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .skills { background:#f0fff4; padding:40px; }
 .skills ul { list-style:none; display:flex; flex-wrap:wrap; gap:15px; padding:0; }
 .skills li { background:#dcfce7; padding:15px 20px; border-radius:15px; flex:1 1 200px; text-align:center; font-weight:bold; }
+<img src="yourphoto.jpg" alt="Sudarshan Gautam" 
+     style="width:150px; height:150px; border-radius:50%; object-fit:cover; margin-bottom:15px; box-shadow:0 4px 10px rgba(0,0,0,0.3);">
 
 /* Workshops & Training */
 .workshops { background:#fff7ed; padding:40px; }
@@ -128,15 +130,18 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Header -->
 <header id="home">
+  <img src="yourphoto.jpg" alt="Sudarshan Gautam" style="...">
   <h1>Sudarshan Gautam</h1>
   <p>Researcher in Linguistics & NLP</p>
   <a href="CV.pdf" class="btn" target="_blank">Download CV</a>
   <p id="datetime" style="margin-top:20px; font-size:1.1em;"></p>
 </header>
 
+
 <!-- About -->
 <section id="about" class="about">
-  <img src="https://via.placeholder.com/250" alt="Sudarshan Gautam">
+<img src="yourphoto.jpg" alt="Sudarshan Gautam" 
+     style="width:250px; height:250px; border-radius:50%; object-fit:cover; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
   <div>
     <h2>About Me</h2>
     <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.</p>
